Adiconada a publicacao e rascunhos

--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -1,5 +1,8 @@
+body{
+    background-color: rgb(243, 243, 243);
+}
 .page-header {
-    background-color: #C25100;
+    background-color: #005499;
     margin-top: 0;
     padding: 20px 20px 20px 40px;
 }
@@ -14,11 +17,16 @@
     margin-left: 40px;
 }
 
-h1, h2, h3, h4 {
-    font-family: 'Lobster', cursive;
+h1 {
+    font-weight: bolder;
+    font-style: oblique;
+}
+h2, h3, h4, h5{
+    font-style: bold;
 }
 
 .date {
+    font-size: small;
     color: #828282;
 }
 
@@ -33,7 +41,7 @@ h1, h2, h3, h4 {
 .top-menu, .top-menu:hover, .top-menu:visited {
     color: #ffffff;
     float: right;
-    font-size: 26pt;
+    font-size: 20pt;
     margin-right: 20px;
 }
 
