--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -1,18 +1,21 @@
 {% load static %}
 <html>
     <head>
-        <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
-        <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
         <link rel="stylesheet" href="{% static 'css/blog.css' %}">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
         <link href="//fonts.googleapis.com/css?family=Lobster&subset=latin,latin-ext" rel="stylesheet" type="text/css">
-        <title>Blog Django Girls</title>
+        <title>Blog theDjango</title>
     </head>
     <body>
         <div class="page-header">
+
             {% if user.is_authenticated %}
-                <a href="{% url 'post_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
+                <a href="{% url 'post_new' %}" class="top-menu"><i class="bi bi-plus-square-fill"></i></a>
+                <a href="{% url 'post_draft_list' %}" class="top-menu"><i class="bi bi-pencil-square"></i></a>
             {% endif %}
-            <h1><a href="/">Django Girls Blog</a></h1>
+            
+            <h1><a href="/">Blog theDjango</a></h1>
         </div>
 
         <div class="content container">
@@ -20,8 +23,10 @@
                 <div class="col-md-8">
                     {% block content %}
                     {% endblock %}
+
                 </div>
             </div>
+
         </div>
     </body>
 </html>
