--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -1,16 +1,24 @@
 {% extends 'blog/base.html' %}
 
 {% block content %}
-    <div class="post">
-        {% if post.published_date %}
-            <div class="date">
-                {{ post.published_date }}
-            </div>
-        {% endif %}
+    <div class="post d-flex flex-column">
+
         {% if user.is_authenticated %}
-            <a class="btn btn-default" href="{% url 'post_edit' pk=post.pk %}"><span class="glyphicon glyphicon-pencil"></span></a>
+        <div class="d-flex flex-row justify-content-start m-1">
+            <a class="btn btn-default m-0 p-0" href="{% url 'post_edit' pk=post.pk %}"><h2><i class="bi bi-pencil-square"></i></h2></a>
+        </div>
         {% endif %}
         <h2>{{ post.title }}</h2>
         <p>{{ post.text|linebreaksbr }}</p>
+
+        {% if post.published_date %}
+        <div class="date">
+            {{ post.published_date }}
+        </div>
+    {% else %}
+        <form method="POST" action={% url 'post_publish' pk=post.pk %} class="post-form">{% csrf_token %}
+        <button type="submit" class="post btn btn-info m-2" name="publish">Publicar</button>
+        </form>
+    {% endif %}
     </div>
 {% endblock %}
