--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,12 +1,13 @@
 {% extends 'blog/base.html' %}
 {% block content %}
                     {% for post in posts %}
-                        <div class="post">
-                            <div class="date">
-                                <p>published: {{ post.published_date }}</p>
+                        <div class="post card m-2">
+
+                            <div class="card-body">
+                                <h2 class="card-title"><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h2>
+                                <p class="date card-subtitle">data de publicação: {{ post.published_date }}</p>
+                                <p class="card-text">{{ post.text|linebreaksbr }}</p>
                             </div>
-                            <h2><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h2>
-                            <p>{{ post.text|linebreaksbr }}</p>
                         </div>
                     {% endfor %}
      {% endblock %}
