--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -1,32 +1,28 @@
 {% load static %}
 <html>
-    <head>
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-        <link rel="stylesheet" href="{% static 'css/blog.css' %}">
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-        <link href="//fonts.googleapis.com/css?family=Lobster&subset=latin,latin-ext" rel="stylesheet" type="text/css">
-        <title>Blog theDjango</title>
-    </head>
-    <body>
-        <div class="page-header">
+  <head>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous" />
+    <link rel="stylesheet" href="{% static 'css/blog.css' %}" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" />
+    <link href="//fonts.googleapis.com/css?family=Lobster&subset=latin,latin-ext" rel="stylesheet" type="text/css" />
+    <title>Blog theDjango</title>
+  </head>
+  <body>
+    <div class="page">
+      <div class="page-header">
+        {% if user.is_authenticated %}
+          <a href="{% url 'post_new' %}" class="top-menu"><i class="bi bi-plus-square-fill"></i></a>
+          <a href="{% url 'post_draft_list' %}" class="top-menu"><i class="bi bi-pencil-square"></i></a>
+        {% endif %}
 
-            {% if user.is_authenticated %}
-                <a href="{% url 'post_new' %}" class="top-menu"><i class="bi bi-plus-square-fill"></i></a>
-                <a href="{% url 'post_draft_list' %}" class="top-menu"><i class="bi bi-pencil-square"></i></a>
-            {% endif %}
-            
-            <h1><a href="/">Blog theDjango</a></h1>
-        </div>
+        <h1><a href="/">Blog theDjango</a></h1>
+      </div>
 
-        <div class="content container">
-            <div class="row">
-                <div class="col-md-8">
-                    {% block content %}
-                    {% endblock %}
+      <div class="content">
+        {% block content %}
 
-                </div>
-            </div>
-
-        </div>
-    </body>
+        {% endblock %}
+      </div>
+    </div>
+  </body>
 </html>
