--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -1,24 +1,38 @@
 {% extends 'blog/base.html' %}
 
 {% block content %}
-    <div class="post d-flex flex-column">
+    <div class="post d-flex flex-column justify-content-between p-2">
 
-        {% if user.is_authenticated %}
-        <div class="d-flex flex-row justify-content-start m-1">
-            <a class="btn btn-default m-0 p-0" href="{% url 'post_edit' pk=post.pk %}"><h2><i class="bi bi-pencil-square"></i></h2></a>
-        </div>
-        {% endif %}
-        <h2>{{ post.title }}</h2>
-        <p>{{ post.text|linebreaksbr }}</p>
+        <div class="post card m-2">
+            <div class="card-body">
+              <h2 class="card-title"><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h2>
+              <p class="card-text">{{ post.text|linebreaksbr }}</p>
+            </div>
+          </div>
+        <div class="d-flex flex-row">
+            {% if user.is_authenticated %}
+            <div class="d-flex flex-row justify-content-start">
+                <a  href="{% url 'post_edit' pk=post.pk %}"><button class="post btn btn-info m-2">Editar</button></a>
+            </div>
+            <form method="POST" action={% url 'post_remove' pk=post.pk %} class="post-form">{% csrf_token %}
+                <button type="submit" class="post btn btn-danger m-2" name="delete">
+                    Remover
+                </button>
+            </form>
+            {% endif %}
 
-        {% if post.published_date %}
-        <div class="date">
-            {{ post.published_date }}
+            {% if post.published_date %}
+            <hr/>
+                <div class="date m-2">
+                    {{ post.published_date }}
+                </div>
+            {% else %}
+                <form method="POST" action="{% url 'post_publish' pk=post.pk %}" class="post-form">{% csrf_token %}
+                    <button type="submit" class="post btn btn-info m-2" name="publish">Publicar</button>
+                </form>
+            {% endif %}
+
+
         </div>
-    {% else %}
-        <form method="POST" action={% url 'post_publish' pk=post.pk %} class="post-form">{% csrf_token %}
-        <button type="submit" class="post btn btn-info m-2" name="publish">Publicar</button>
-        </form>
-    {% endif %}
     </div>
 {% endblock %}
