--- a/blog/templates/blog/post_edit.html
+++ b/blog/templates/blog/post_edit.html
@@ -1,9 +1,16 @@
 {% extends 'blog/base.html' %}
 
 {% block content %}
-    <h2>Editando Post!</h2>
-    <form method="POST" class="post-form">{% csrf_token %}
+  <h2>Editando Post!</h2>
+  <div class="p-2 m-2">
+    <form method="POST" class="post-form">
+      {% csrf_token %}
+      <div class="form-group">
         {{ form.as_p }}
-        <button type="submit" class="save btn btn-default">Salvar</button>
+        <button type="submit" class="save btn btn-primary">Salvar</button>
+      </div>
     </form>
+    
+
+  </div>
 {% endblock %}
