--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,13 +1,14 @@
 {% extends 'blog/base.html' %}
 {% block content %}
-                    {% for post in posts %}
-                        <div class="post card m-2">
-
-                            <div class="card-body">
-                                <h2 class="card-title"><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h2>
-                                <p class="date card-subtitle">data de publicação: {{ post.published_date }}</p>
-                                <p class="card-text">{{ post.text|linebreaksbr }}</p>
-                            </div>
-                        </div>
-                    {% endfor %}
-     {% endblock %}
+  <div class="list">
+    {% for post in posts %}
+      <div class="post card m-2">
+        <div class="card-body">
+          <h2 class="card-title"><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h2>
+          <p class="date card-subtitle">data de publicação: {{ post.published_date }}</p>
+          <p class="card-text">{{ post.text|linebreaksbr }}</p>
+        </div>
+      </div>
+    {% endfor %}
+  </div>
+{% endblock %}
