--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -11,9 +11,13 @@
     <div class="page">
       <div class="page-header">
         {% if user.is_authenticated %}
-          <a href="{% url 'post_new' %}" class="top-menu"><i class="bi bi-plus-square-fill"></i></a>
+        <a href="{% url 'post_new' %}" class="top-menu"><i class="bi bi-plus-square-fill"></i></a>
+        <a class ="top-menu" href="{% url 'logout' %}"><i class="bi bi-box-arrow-right"></i></a>
           <a href="{% url 'post_draft_list' %}" class="top-menu"><i class="bi bi-pencil-square"></i></a>
-        {% endif %}
+          <p class="top-menu">{{ user.username }}</p>
+          {% else %}
+          <a href="{% url 'login' %}" class="top-menu"><span class="glyphicon glyphicon-lock"></span></a>
+          {% endif %}
 
         <h1><a href="/">Blog theDjango</a></h1>
       </div>
