--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -12,7 +12,10 @@
       <div class="page-header">
         {% if user.is_authenticated %}
         <a href="{% url 'post_new' %}" class="top-menu"><i class="bi bi-plus-square-fill"></i></a>
-        <a class ="top-menu" href="{% url 'logout' %}"><i class="bi bi-box-arrow-right"></i></a>
+        <form action="{% url 'logout' %}" method="POST">
+          {% csrf_token %}
+        <buton type="submit"><i class="bi bi-box-arrow-right"></i></button>
+        </form>
           <a href="{% url 'post_draft_list' %}" class="top-menu"><i class="bi bi-pencil-square"></i></a>
           <p class="top-menu">{{ user.username }}</p>
           {% else %}
