--- a/blog/templates/registration/login.html
+++ b/blog/templates/registration/login.html
@@ -6,21 +6,23 @@
         <p>Usuário ou senha tão errados, vacilão!</p>
     {% endif %}
 
-    <form method="post" action="{% url 'login' %}">
-        {% csrf_token %}
-        <table>
-            <tr>
-                <td>{{ form.username.label_tag }}</td>
-                <td>{{ form.username }}</td>
-            </tr>
-            <tr>
-                <td>{{ form.password.label_tag }}</td>
-                <td>{{ form.password }}</td>
-            </tr>
-            </table>
-    
+    <div>
+        <form method="post" action="{% url 'login' %}">
+            {% csrf_token %}
+            <div>
+                <div>
+                    <td>{{ form.username.label_tag }}</td>
+                    <td>{{ form.username }}</td>
+                </div>
+                <div>
+                    <td>{{ form.password.label_tag }}</td>
+                    <td>{{ form.password }}</td>
+                </div>
+            </div>
+            
             <input type="submit" value="login" />
             <input type="hidden" name="next" value="{{ next }}" />
-    </form>
+        </form>
+    </div>
 
     {% endblock %}
